# shellenv

./: .envrc  .gitignore  .lightrc  .psenvrc  .tasks  Cargo.toml  README.md  justfile
benches/: bench.rs
src/: cli.rs  config.rs  env.toml  lib.rs  logger.rs  main.rs  os.rs  shell.rs  util.rs  var.rs
tests/: cli.rs  path.toml
