[package]
name = "shellenv"
version = "0.1.0"
authors = ["Nick Murphy <comfortablynick@gmail.com>"]
description = "Parses toml file of configuration into shell environment files"
edition = "2018"

[dev-dependencies]
criterion = "0.3"
assert_cmd = "1.0.1"
predicates = "1.0.4"

[dependencies]
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
clap = "3.0.0-beta.1"
log = "0.4.8"
anyhow = "1.0.31"
lazy_format = "1.7.4"

[[bench]]
name = "bench"
harness = false
